# aptos-core

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  x.toml
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_bug_report.md
.github/workflows/: ci-test.yml
api/: Cargo.toml  Makefile  README.md
api/doc/: openapi.yaml
api/src/: accounts.rs  context.rs  events.rs  failpoint.rs  health_check.rs  index.rs  lib.rs  log.rs  metrics.rs  page.rs  param.rs  runtime.rs  transactions.rs
api/types/: Cargo.toml
aptos-move/aptos-keygen/: Cargo.toml
aptos-move/aptos-resource-viewer/: Cargo.toml
aptos-move/aptos-transaction-benchmarks/: Cargo.toml
aptos-move/aptos-transactional-test-harness/: Cargo.toml
aptos-move/aptos-validator-interface/: Cargo.toml
aptos-move/aptos-vm/: Cargo.toml  README.md
aptos-move/df-cli/: Cargo.toml
aptos-move/diem-framework/: Cargo.toml
aptos-move/e2e-tests/: Cargo.toml
aptos-move/e2e-tests-replay/: Cargo.toml
aptos-move/e2e-testsuite/: Cargo.toml
aptos-move/genesis-viewer/: Cargo.toml
aptos-move/mvhashmap/: Cargo.toml
aptos-move/parallel-executor/: Cargo.toml
aptos-move/transaction-builder-generator/: Cargo.toml  README.md
aptos-move/transaction-replay/: Cargo.toml
aptos-move/vm-genesis/: Cargo.toml
aptos-move/writeset-transaction-generator/: Cargo.toml
aptos-node/: Cargo.toml
aptos-node/src/: lib.rs  main.rs
config/: Cargo.toml  README.md
config/generate-key/: Cargo.toml
config/global-constants/: Cargo.toml
config/global-constants/src/: lib.rs
config/management/: Cargo.toml
config/seed-peer-generator/: Cargo.toml
config/src/: generator.rs  keys.rs  lib.rs  network_id.rs  utils.rs
consensus/: Cargo.toml  README.md
consensus/consensus-types/: Cargo.toml
consensus/safety-rules/: Cargo.toml
consensus/src/: consensus_provider.rs  counters.rs  epoch_manager.rs  error.rs  lib.rs  logging.rs  metrics_safety_rules.rs  network.rs  network_interface.rs  network_tests.rs  pending_votes.rs  persistent_liveness_storage.rs  round_manager.rs  round_manager_fuzzing.rs  round_manager_test.rs  state_computer.rs  state_replication.rs  txn_manager.rs
crates/aptos/: Cargo.toml
crates/aptos-bitvec/: Cargo.toml
crates/aptos-crypto/: Cargo.toml  README.md
crates/aptos-crypto-derive/: Cargo.toml
crates/aptos-crypto-derive/src/: hasher.rs  lib.rs  unions.rs
crates/aptos-documentation-tool/: Cargo.toml
crates/aptos-faucet/: Cargo.toml  README.md
crates/aptos-id-generator/: Cargo.toml
crates/aptos-infallible/: Cargo.toml
crates/aptos-log-derive/: Cargo.toml
crates/aptos-log-derive/src/: lib.rs
crates/aptos-logger/: Cargo.toml
crates/aptos-metrics/: Cargo.toml  build.rs
crates/aptos-metrics-core/: Cargo.toml
crates/aptos-metrics-core/src/: lib.rs
crates/aptos-proptest-helpers/: Cargo.toml
crates/aptos-rate-limiter/: Cargo.toml
crates/aptos-rest-client/: Cargo.toml
crates/aptos-retrier/: Cargo.toml
crates/aptos-retrier/src/: lib.rs
crates/aptos-temppath/: Cargo.toml
crates/aptos-temppath/src/: lib.rs
crates/aptos-time-service/: Cargo.toml
crates/aptos-wallet/: Cargo.toml  README.md
crates/aptos-workspace-hack/: Cargo.toml  build.rs
crates/bounded-executor/: Cargo.toml
crates/bounded-executor/src/: lib.rs
crates/channel/: Cargo.toml
crates/crash-handler/: Cargo.toml
crates/debug-interface/: Cargo.toml
crates/fallible/: Cargo.toml
crates/num-variants/: Cargo.toml
crates/proxy/: Cargo.toml
crates/short-hex-str/: Cargo.toml
crates/swiss-knife/: Cargo.toml  README.md
crates/transaction-emitter/: Cargo.toml
devtools/x/: Cargo.toml
devtools/x-core/: Cargo.toml
devtools/x-lint/: Cargo.toml
docker/: aptos-build.sh  build-aws.sh  build-common.sh  build-push-local.sh  build_push.sh  docker-bake-rust-all.hcl  docker-bake-rust-all.sh  docker_republish.sh  install-tools.sh  rust-all.Dockerfile  tag-and-push.sh
docker/compose/: test_docker_compose.sh
docker/faucet/: build.sh  buildspec.yaml
docker/forge/: build.sh  buildspec.yaml
docker/init/: Dockerfile  build.sh  buildspec.yaml
docker/safety-rules/: build.sh  buildspec.yaml
docker/vault/: run.sh
documentation/: coding_guidelines.md
execution/: README.md
mempool/: Cargo.toml  README.md
network/: Cargo.toml  README.md
network/memsocket/: Cargo.toml
network/memsocket/src/: lib.rs
network/memsocket/tests/: memory_listener.rs  memory_socket.rs
scripts/: cargo_check_dependencies.sh  cargo_update_outdated.sh  changed-files.sh  dev_setup.sh  dockerhub_prune.sh  git-checks.sh  run_quarantined.sh  weekly-dep-report.sh
sdk/: Cargo.toml  README.md  publishing.md
secure/storage/github/: Cargo.toml
secure/storage/github/src/: lib.rs
specifications/: README.md
storage/: README.md
types/: Cargo.toml
vm-validator/: Cargo.toml
(+1343 files in other folders)
