[package]
name = "aptos-global-constants"
version = "0.1.0"
authors = ["Aptos Association <opensource@aptos.com>"]
description = "Aptos's global constant crate: the source of truth for constant definitions that span multiple crates"
repository = "https://github.com/aptos/aptos"
homepage = "https://aptos.com"
license = "Apache-2.0"
publish = false
edition = "2018"
