[package]
name = "aptos-crypto-derive"
version = "0.0.3"
authors = ["Aptos Association <opensource@aptos.com>"]
description = "Aptos custom derives for `aptos-crypto`"
repository = "https://github.com/aptos/aptos"
homepage = "https://aptos.com"
license = "Apache-2.0"
publish = ["crates-io"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.64", features = ["derive"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
aptos-workspace-hack = { version = "0.1", path = "../aptos-workspace-hack" }

[dev-dependencies]
anyhow = "1.0.52"
