[package]
name = "aptos-log-derive"
version = "0.1.0"
authors = ["Aptos Association <opensource@aptos.com>"]
repository = "https://github.com/aptos/aptos"
homepage = "https://aptos.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[lib]
proc-macro = true

[dependencies]
aptos-workspace-hack = { version = "0.1", path = "../aptos-workspace-hack" }
syn = { version = "1.0.64", features = ["extra-traits"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
