[package]
name = "aptos-metrics-core"
version = "0.1.0"
authors = ["Aptos Association <opensource@aptos.com>"]
description = "Aptos aptos-metrics-core"
repository = "https://github.com/aptos/aptos"
homepage = "https://aptos.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
aptos-workspace-hack = { version = "0.1", path = "../aptos-workspace-hack" }
prometheus = { version = "0.12.0", default-features = false }
