[package]
name = "aptos-temppath"
version = "0.1.0"
authors = ["Aptos Association <opensource@aptos.com>"]
description = "Aptos aptos-temppath"
repository = "https://github.com/aptos/aptos"
homepage = "https://aptos.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
hex = "0.4.3"
aptos-workspace-hack = { version = "0.1", path = "../aptos-workspace-hack" }
rand = "0.8.3"
