[package]
name = "bounded-executor"
version = "0.1.0"
authors = ["Aptos Association <opensource@aptos.com>"]
description = "Aptos bounded executor"
repository = "https://github.com/aptos/aptos"
homepage = "https://aptos.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
futures = "0.3.12"
aptos-workspace-hack = { version = "0.1", path = "../aptos-workspace-hack" }
tokio = { version = "1.8.1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.8.1", features = ["full"] }
