[package]
name = "memsocket"
version = "0.1.0"
authors = ["Aptos Association <opensource@aptos.com>"]
description = "Aptos memsocket"
repository = "https://github.com/aptos/aptos"
homepage = "https://aptos.com"
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
futures = "0.3.12"
bytes = "1.0.1"
once_cell = "1.7.2"
aptos-infallible = { path = "../../crates/aptos-infallible" }
aptos-workspace-hack = { version = "0.1", path = "../../crates/aptos-workspace-hack" }

[features]
default = []
fuzzing = []
testing = []
