[package]
name = "aptos-github-client"
version = "0.1.0"
authors = ["Aptos Association <opensource@aptos.com>"]
repository = "https://github.com/aptos/aptos"
description = "Aptos's Restful GitHub Client"
homepage = "https://aptos.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
serde = { version = "1.0.124", features = ["derive"], default-features = false }
serde_json = "1.0.64"
thiserror = "1.0.24"
ureq = { version = "1.5.4", features = ["json", "native-tls"], default-features = false }
aptos-workspace-hack = { version = "0.1", path = "../../../crates/aptos-workspace-hack" }
proxy = { path = "../../../crates/proxy" }

[dev-dependencies]
base64 = "0.13.0"
